News UAT/force-app/main/default/objects/SocialCampaign__c/SocialCampaign__c.object-meta.xml
<CustomObject>
    <description>This object is for NewsXtend Customers who access My-Account community</description>
    <label>Proof</label>
    <nameField>
        <displayFormat>PF-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proofs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>