News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Campaign_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_End_Date__c</fullName>
    <description>Campaign (Proof) End Date</description>
    <inlineHelpText>Campaign (Proof) End Date</inlineHelpText>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>