News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Campaign_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Campaign (Proof) start date</description>
    <inlineHelpText>Campaign (Proof) start date</inlineHelpText>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>