News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Created_From_Staging__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Staging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be checked if this record is created from staging record.</description>
    <label>Created From Staging</label>
    <type>Checkbox</type>
</CustomField>