News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Customer_Email_For_Notification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_For_Notification__c</fullName>
    <description>This field will be used to capture email address of Customer from Campaign Orders &#39;Campaign Customer Contact&#39; field.
This field will be populated by a process builder at the time of creation of record.</description>
    <label>Customer Email For Notification</label>
    <type>Email</type>
</CustomField>