News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Due_Date_For_Auto_Approval__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_For_Auto_Approval__c</fullName>
    <formula>CreatedDate  +  $Setup.NXX2_Proofs_Setting__c.Approve_Task_After_X_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date For Auto Approval</label>
    <type>Date</type>
</CustomField>