News UAT/force-app/main/default/objects/SocialCampaign__c/fields/GTM_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>GTM_Tasks_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>GTM Tasks Completed</description>
    <label>GTM Tasks Completed</label>
    <type>Checkbox</type>
</CustomField>