News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Is_Proof_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Proof_Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by the auto approval process.</description>
    <label>Is Proof Auto Approved</label>
    <type>Checkbox</type>
</CustomField>