News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Number_of_Email_Sent_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Email_Sent_For_Approval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will capture how many times email sent to customer for approval</description>
    <label>Number of Email Sent For Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>