News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Order</label>
    <referenceTo>Product_Order__c</referenceTo>
    <relationshipName>Social_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>