News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Proof_Name__c.field-meta.xml
<CustomField>
    <fullName>Proof_Name__c</fullName>
    <description>Proof Name</description>
    <label>Proof Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>