News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Send_Approval_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Approval_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used by the Work Flow to trigger Send Email Process Builder, which will actually handle approval emails</description>
    <label>Send Approval Emails</label>
    <type>Checkbox</type>
</CustomField>