News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Send_Email_Initiation_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Initiation_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>This Date Time will be used in the work flow which will trigger Process builder for reminder email.</description>
    <label>Send Email Initiation Time</label>
    <type>DateTime</type>
</CustomField>