News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Social_Campaign_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Campaign_Number__c</fullName>
    <displayFormat>SC_{000000000}</displayFormat>
    <label>Social Campaign Number</label>
    <type>AutoNumber</type>
</CustomField>