News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Social_Plan_Focus__c.field-meta.xml
<CustomField>
    <fullName>Social_Plan_Focus__c</fullName>
    <label>Social Plan Focus</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>