News UAT/force-app/main/default/objects/SocialCampaign__c/fields/Visible_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be used to share record with customer</description>
    <label>Visible To Customer</label>
    <type>Checkbox</type>
</CustomField>