News UAT/force-app/main/default/objects/SocialCampaign__c/fields/X2_Portal_Campaign_Reference__c.field-meta.xml
<CustomField>
    <fullName>X2_Portal_Campaign_Reference__c</fullName>
    <externalId>true</externalId>
    <label>X2 Portal Campaign Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>