News UAT/force-app/main/default/objects/SocialCampaign__c/recordTypes/Display.recordType-meta.xml
<RecordType>
    <fullName>Display</fullName>
    <active>true</active>
    <description>Record for display ad</description>
    <label>Display</label>
</RecordType>