News UAT/force-app/main/default/objects/SocialCampaign__c/recordTypes/Social.recordType-meta.xml
<RecordType>
    <fullName>Social</fullName>
    <active>true</active>
    <description>Record with social ad</description>
    <label>Social</label>
</RecordType>