News UAT/force-app/main/default/objects/SocialCampaign__c/validationRules/VR_Check_Campaign_Customer_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Campaign_Customer_Contact</fullName>
    <active>true</active>
    <description>The validation rule will check, if Campaign Customer Contact exist in Campaign Order or not.</description>
    <errorConditionFormula>OR( ISNULL( Product_Order__r.Order__r.Campaign_Customer_Contact__c ) , ISBLANK(Product_Order__r.Order__r.Campaign_Customer_Contact__c) )</errorConditionFormula>
    <errorMessage>Campaign Customer Contact is required at Campaign Order.</errorMessage>
</ValidationRule>