News UAT/force-app/main/default/objects/SocialCampaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Order__c</columns>
    <columns>Campaign_Start_Date__c</columns>
    <columns>Campaign_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Proof_Auto_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>