News UAT/force-app/main/default/objects/SocialCampaign__c/listViews/My_Proofs.listView-meta.xml
<ListView>
    <fullName>My_Proofs</fullName>
    <columns>NAME</columns>
    <columns>Product_Order__c</columns>
    <columns>Campaign_Start_Date__c</columns>
    <columns>Campaign_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Proof_Auto_Approved__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Proofs</label>
</ListView>